--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcsh 'Authors -- Fiction'
 - !lcc 'PT'
 - !lcsh 'Urban poor -- Fiction'
+- GITenberg
 title: Sult
 url: http://www.gutenberg.org/ebooks/30027
